--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./CSS/style.css">
-    <link rel="stylesheet" href="./criptografia.css" />
-    <link rel="stylesheet" href="mobile.css" />
+    <link rel="stylesheet" href="./CSS/criptografia.css" />
+    <link rel="stylesheet" href="./CSS/mobile.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,7 +14,8 @@
     />
     <title>Criptográfico</title>
 </head>
-<body>
+<body background="img/5927911.gif">
+    
     <form class="decoder">
         <h1>Tudo no sigilo</h1>
   
@@ -77,5 +77,6 @@
     
     <script src="./Scripts/base64.js"></script>
     <script src="./Scripts/cifraDeCesar.js"></script>
+    <script src="./Scripts/criptografia.js"></script>
 </body>
 </html>
