--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
         ></textarea>
   
         <fieldset>
-          <legend>Método</legend>
+          <legend>Métodos</legend>
           <select class="metodo" required>
             <option>Escolha o método</option>
             <option>Cifra de Cesar</option>
